<resources>
    <string name="facebook_app_id">121201701911116</string>

    <string name="app_name">BringIt</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- String resources numbers -->
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="five">Five</string>
    <string name="six">Six</string>
    <string name="seven">Seven</string>
    <string name="eight">Eight</string>
    <string name="nine">Nine</string>
    <string name="ten">Ten</string>

    <!--Login activity resources -->
    <string name="login_activity_email">Email</string>
    <string name="login_activity_password">Password</string>
    <string name="login_activity_login">Login</string>
    <string name="login_activity_or">or</string>
    <string name="login_activity_register">No account yet? Create one</string>

    <string name="login_activity_signing_in">Signing in...</string>
    <string name="login_activity_login_cancelled">Login cancelled</string>
    <string name="login_activity_authentification_fail">Authentification fail, please check your connection</string>
    <string name="login_activity_invalid_data">Invalid data</string>
    <string name="login_activity_net_connection">Please check your net connection</string>
    <string name="login_activity_error_authenfication">An error has occurred when authenticating user</string>

    <!-- Sign up activity resources -->
    <string name="sign_up_activity_username">Username</string>
    <string name="sign_up_activity_email">Email</string>
    <string name="sign_up_activity_password">Password</string>
    <string name="sign_up_activity_confirm_password">Confirm password</string>
    <string name="sign_up_activity_create_account">Create account</string>
    <string name="sign_up_activity_login">Already a member? Login</string>

    <string name="sign_up_activity_invalid_username">Invalid username</string>
    <string name="sign_up_activity_invalid_email">Invalid email</string>
    <string name="sign_up_activity_invalid_password">Invalid password</string>
    <string name="sign_up_activity_invalid_confirm_password">Invalid confirm password</string>
    <string name="sign_up_activity_error_signing_up">An error on signing up</string>

    <!-- Main activity resources -->
    <string name="main_activity_your_shopping_lists">Your shopping lists</string>
    <string name="main_activity_greeting">Welcome!</string>
    <string name="main_activity_shopping_lists">Shopping lists</string>
    <string name="main_activity_products">Products</string>
    <string name="main_activity_chat">Chat</string>
    <string name="main_activity_configuration">Configuration</string>
    <string name="main_activity_settings">Settings</string>
    <string name="main_activity_log_out">Logout</string>
    <string name="main_activity_shopping_lists_google">Google</string>
    <string name="main_activity_shopping_lists_watson">Watson</string>
    <string name="main_activity_shopping_lists_houndy">Houndify</string>

    <!-- Shopping list resources -->
    <string name="shopping_list_options">Options</string>
    <string name="shopping_list_share">Share</string>
    <string name="shopping_list_share_title">Share shopping list</string>
    <string name="shopping_list_delete">Delete</string>
    <string name="shopping_list_modify">Modifiy</string>

    <string name="shopping_list_share_error">An error when sharing shopping list</string>
    <string name="shopping_list_share_success">Shopping list has been shared</string>
    <string name="shopping_list_delete_error">An error when deleting shopping list</string>
    <string name="shopping_list_delete_success">Shopping list has been eliminated</string>
    <string name="shopping_list_modify_error">An error when modifying shopping list</string>
    <string name="shopping_list_modify_success">Shopping list has been modified</string>
    <string name="shopping_list_save_error">An error when adding shopping list</string>
    <string name="shopping_list_save_success">Shopping list has been added</string>

    <string name="shopping_list_invalid_name">Invalid shopping list name</string>
    <string name="shopping_list_pending">is pending!</string>
    <string name="shopping_list_no_date">No date</string>
    <string name="shopping_list_no_time">No time</string>

    <string name="shopping_list_title">New shopping  list</string>
    <string name="shopping_list_name">Shopping list name</string>
    <string name="shopping_list_notifications">Notifications</string>
    <string name="shopping_list_date">Shopping list date</string>
    <string name="shopping_list_time">Shopping list time</string>

    <!-- Product resources -->
    <string name="product_options">Options</string>
    <string name="product_modify">Modify</string>
    <string name="product_delete">Delete</string>
    <string name="product_quantity">Quant.</string>
    <string name="product_description">Description</string>
    <string name="product_price">Price</string>
    <string name="product_on_list">On list</string>
    <string name="product_in_cart">In cart</string>
    <string name="product_total_price">Total</string>

    <string name="product_modify_status_error">An error when adding product to cart</string>
    <string name="product_modify_status_success">Product has been added to cart</string>
    <string name="product_modify_error">An error when modifying product</string>
    <string name="product_modify_success">Product has been modified</string>
    <string name="product_delete_error">An error when deleting product</string>
    <string name="product_delete_success">Product has been eliminated</string>
    <string name="product_save_error">An error when adding a product</string>
    <string name="product_save_success">Product has been added</string>

    <string name="product_invalid_name">Invalid product name</string>
    <string name="product_invalid_quantity">Invalid product quantity</string>
    <string name="product_invalid_price">Invalid product price</string>

    <string name="product_title">New product</string>
    <string name="product_name">Product name</string>
    <string name="product_quantity_m">Product quantity</string>
    <string name="product_price_m">Product price</string>

    <!-- Speech resources -->
    <string name="speech_start">Say something!</string>
    <string name="speech_error">Sorry! Your device doesn\'t support speech input</string>
    <string name="speech_yes">Yes</string>
    <string name="speech_no">No</string>

    <!--Share resources -->
    <string name="share_auto_complete">Place a user email</string>
    <string name="share_invalid_email">Invalid email</string>

    <!-- Settings  resources -->
    <string name="language">Language</string>
    <string name="choose_language">Choose a language</string>
    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string-array name="supported_languajes">
        <item>US English</item>
        <item>Spanish</item>
        <item>French</item>
        <item>Modern Standard Arabic</item>
        <item>Japanese</item>
        <item>Brazilian</item>
        <item>Mandarin</item>
    </string-array>
</resources>
