<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/choose_language"
            android:textSize="10pt"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="48dp">

                <ImageButton
                    android:layout_marginBottom="8dp"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:id="@+id/button_spanish_language"
                    android:background="@drawable/spanish_language"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/spanish"
                    android:layout_below="@+id/button_spanish_language"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageButton
                    android:layout_marginBottom="8dp"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:id="@+id/button_english_language"
                    android:background="@drawable/english_language"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/english"
                    android:layout_below="@id/button_english_language"/>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>